--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <p><a href="index.html"><img src="images/logo.png" alt="Image"></a></p>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="menu.html">menu.html</a></li>
+<li><a href="menu.html">menu</a></li>
 <li><a href="locations.html">Locations</a></li>
 <li><a href="about.html">About Us</a></div>
 
@@ -83,7 +83,7 @@
 
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="menu.html">menu.html</a></li>
+<li><a href="menu.html">menu</a></li>
 <li><a href="locations.html">Locations</a></li>
 <li><a href="about.html">About Us</a></li>
 </ul>
